--- a/L1and2.rnw
+++ b/L1and2.rnw
@@ -281,48 +281,58 @@ cat("\\[", out, "\\]")
 \frametitle{Dotplot of albumin data}
 A dotplot is a one dimensional plot of the data.
 
-If there are non-unique (or close) points, the data set
-may appear smaller than it is. (Perturbation solves this.)
-
-<<plot_alb, fig.align='center', fig.height=5, fig.width=11>>=
+\rymd
+<<plot_alb, fig.align='center', fig.height=3, fig.width=11>>=
 load("data/F3_albumin.Rdata")
-par(mar=c(4,9,0,0))
+par(mar=c(4,7,0,0))
 plot(
    x = alb, y = rep(2,8),
-   yaxt='n', ylab="", ylim=c(0.5,2.5),
+   yaxt='n', ylab="", ylim=c(0.8,1.2),
    xlab="g / dL",
    cex.lab=1.2,
    main=""
 )
-points(sort(alb), c(1.1,0.9, rep(1,6)))
-wtf <- axis(2, at=1:2, labels=FALSE)
+points(sort(alb), rep(1,8))
+wtf <- axis(2, at=1, labels=FALSE)
 text(
-   x=2.1, y=wtf,
-   labels=c("Perturbed dots", "Overlapping dots"),
+   x=1.75, y=wtf,
+   labels=c("dots"),
    cex=1.2,
    xpd=TRUE,
    pos=2,
    offset=0
 )
 @
+
+If there are non-unique (or close) points, the data set
+may appear smaller than it really is.
+
+\rymd This can be alleviated by
+\begin{itemize}
+   \item perturbation, or,
+   \item alpha transparency.
+\end{itemize}
 }
 \frame{ % -------------------------------------------------------------------->
 \frametitle{Subarachnoidal bleeding}
 A biomarker - the protein S100$\beta$ - was measured for 113 individuals with aneurysmal subarachnoid hemorrhage. (To return in lecture 10.)
+
+\rymd
 <<plot_subarach, fig.align='center', fig.height=5, fig.width=11>>=
 load("data/F10B_subarach.Rdata")
-par(mar=c(4,9,0,0))
+par(mar=c(4,7,0,0))
 plot(
-   x=dd$s100b, y=rep(2,113),
-   ylab="", yaxt='n', ylim=c(0.5,2.2),
+   x=dd$s100b, y=rep(3,113),
+   ylab="", yaxt='n', ylim=c(0.5,3.2),
    xlab="microgram / litre",
    cex.lab=1.2
 )
+points(x=dd$s100b, y=rep(2,113), pch = 16, col = rgb(0,0,0,0.4))
 dotplot(x = dd$s100b, maxi = 0.5)
-wtf <- axis(2, at=1:2, labels=FALSE)
+wtf <- axis(2, at=1:3, labels=FALSE)
 text(
    x=0, y=wtf,
-   labels=c("Perturbed dots", "Overlapping dots"),
+   labels=c("Perturbed\ndots", "Alpha-\ntransparency", "Overlapping\ndots"),
    cex=1.2,
    xpd=TRUE,
    pos=2,
@@ -333,18 +343,22 @@ text(
 \frame{ % -------------------------------------------------------------------->
 \frametitle{Dotplot and groups}
 Dotplots can display groups.
+
+\rymd
 <<sub_comp, fig.align='center', fig.height=5, fig.width=11>>=
 load("data/F10B_subarach.Rdata")
 x <- dd$s100b[dd$outcome=="Poor"]
 y <- dd$s100b[dd$outcome=="Good"]
 good_col <- .yellow
 bad_col  <- .green
-par(mar=c(4,4,0,0))
+par(mar=c(4,5,0,0))
 layout(matrix(1:2,nrow=2))
 dotplot( x=dd$s100b, new=TRUE, col=ifelse(dd$outcome=="Good", good_col, bad_col),
          xlab="", maxi=0.6, skal=75)
-legend("bottomright", c("Good", "Poor"), col=c(good_col, bad_col), cex=1.2,
-       lty=NULL, pch=1, title="Outcome", bty='n')
+#legend("bottomright", c("Good", "Poor"), col=c(good_col, bad_col), cex=1.2,
+#       lty=NULL, pch=1, title="Outcome", bty='n')
+legend(x = -0.14, y = 1.5, c("Good", "Poor"), col=c(good_col, bad_col), cex=1.2,
+       lty=NULL, pch=1, title="Outcome", bty='n', xpd = TRUE)
 plot(x=dd$s100b,rep(1,113),type='n',xlab="microgram / litre",ylab="",
      yaxt='n', ylim=c(0.5,2.5), cex.lab=1.2)
 dotplot(x, col=bad_col, maxi=0.5)
