--- a/L1and2.rnw
+++ b/L1and2.rnw
@@ -626,8 +626,12 @@ load("data/F8_smoking.Rdata")
 dd$age <- factor(dd$age)
 ggplot(dd, aes(age, fill=smoker)) +
    geom_bar(position="fill") +
-   labs(x="Age", y="Fraction within year") +
-   scale_fill_manual(values=c(.blue, .yellow), name="Smoker")
+   labs(x="Age", y="Percentage within year") +
+   scale_fill_manual(values=c(.blue, .yellow), name="Smoker") +
+   theme_classic()  +
+   scale_y_continuous(breaks = seq(0, 1, by = 0.25), labels = sprintf("%s%%",seq(0,100,by=25)))
+
+
 @
 }
 \frame{ % -------------------------------------------------------------------->
